auto correct off on safari

--- a/src/app/pages/compose/compose.scss
+++ b/src/app/pages/compose/compose.scss
@@ -338,7 +338,7 @@ body.isMobile {
 }
 #more-reci {
   display: none;
-  animation: 1s ease-in forwards modal-dialog;
+  animation: 1s ease-in forwards more-reci;
   width: 32px;
   height: 30px;
   line-height: 30px;
