--- a/src/stylesheets/main/vars.scss
+++ b/src/stylesheets/main/vars.scss
@@ -324,3 +324,14 @@ $sidebar-place-move: $sidebar-delay - $sidebar-scroll-move;
   10% { max-height: 500px;}
   100% { max-height: 0;}
 }
+@keyframes more-reci {
+  0% {
+    transform: scale(.5,.5);
+  }
+  20% {
+    transform: scale(1,1);
+  }
+  100% {
+    transform: scale(1,1);
+  }
+}
